Fixed Gruntfile.js to include host/*.js files into index.html

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -53,18 +53,18 @@
 	<script src="js/app.src.js"></script>
 
 	<!-- start auto template tags -->
+	<script type="text/javascript" src="js/host/app.dragDrop.js"></script>
+	<script type="text/javascript" src="js/host/app.window.js"></script>
+	<script type="text/javascript" src="js/host/updateChecker.js"></script>
 	<script type="text/javascript" src="js/lib/extensions.js"></script>
 	<script type="text/javascript" src="js/lib/functions.js"></script>
 	<script type="text/javascript" src="js/lib/livereload.js"></script>
 	<script type="text/javascript" src="js/lib/overlay.js"></script>
 	<script type="text/javascript" src="js/lib/quantize.js"></script>
-	<script type="text/javascript" src="js/host/app.dragDrop.js"></script>
-	<script type="text/javascript" src="js/host/app.window.js"></script>
-	<script type="text/javascript" src="js/host/updateChecker.js"></script>
-	<script type="text/javascript" src="js/lib/classes/entity-cache.js"></script>
 	<script type="text/javascript" src="js/lib/classes/document-renderer-cache.js"></script>
 	<script type="text/javascript" src="js/lib/classes/document-renderer.js"></script>
 	<script type="text/javascript" src="js/lib/classes/editing-statistics.js"></script>
+	<script type="text/javascript" src="js/lib/classes/entity-cache.js"></script>
 	<script type="text/javascript" src="js/lib/classes/entity.js"></script>
 	<script type="text/javascript" src="js/lib/classes/heatmap-renderer.js"></script>
 	<script type="text/javascript" src="js/lib/classes/layer-cache.js"></script>
@@ -76,6 +76,7 @@
 	<script type="text/javascript" src="js/lib/services/client.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/file.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/selection.service.js"></script>
+	<script type="text/javascript" src="js/lib/services/settings.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/update.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/window.service.js"></script>
 	<script type="text/javascript" src="partials/directives/art-calendar.js"></script>
