Refactored modal dialogs.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -80,7 +80,9 @@
 	<script type="text/javascript" src="js/lib/services/update.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/window.service.js"></script>
 	<script type="text/javascript" src="partials/directives/art-calendar.js"></script>
+	<script type="text/javascript" src="partials/directives/art-client-state-info.js"></script>
 	<script type="text/javascript" src="partials/directives/art-color-picker.js"></script>
+	<script type="text/javascript" src="partials/directives/art-file-card.js"></script>
 	<script type="text/javascript" src="partials/directives/art-keyboard-input-handler.js"></script>
 	<script type="text/javascript" src="partials/directives/art-photo-picker.js"></script>
 	<script type="text/javascript" src="partials/directives/art-settings-accounts.js"></script>
