Implemented update notification dialog.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -90,6 +90,7 @@
 	<script type="text/javascript" src="partials/directives/art-settings-user.js"></script>
 	<script type="text/javascript" src="partials/directives/art-style-binder.js"></script>
 	<script type="text/javascript" src="partials/directives/art-timeline.js"></script>
+	<script type="text/javascript" src="partials/directives/art-update-indicator.js"></script>
 	<script type="text/javascript" src="partials/directives/bs-switch.js"></script>
 	<script type="text/javascript" src="partials/directives/ng-dropzone.js"></script>
 	<script type="text/javascript" src="partials/directives/ng-enter.js"></script>
@@ -97,6 +98,7 @@
 	<script type="text/javascript" src="partials/dialogs/add-account-dialog.controller.js"></script>
 	<script type="text/javascript" src="partials/dialogs/calendar-dialog.controller.js"></script>
 	<script type="text/javascript" src="partials/dialogs/publish-file-dialog.controller.js"></script>
+	<script type="text/javascript" src="partials/dialogs/update-dialog.controller.js"></script>
 	<script type="text/javascript" src="partials/file-list.controller.js"></script>
 	<script type="text/javascript" src="partials/file-view.controller.js"></script>
 	<script type="text/javascript" src="partials/query.controller.js"></script>
@@ -118,6 +120,7 @@
 		</div>
 
 		<div id="window-title-btns">
+			<button class="btn-title btn-info" id="btn-update"><div art-update-indicator></div></button>
 			<button class="btn-title" id="btn-min" uib-tooltip="Minimize" tooltip-placement="bottom" tooltip-popup-delay="1000"><img src="img/windows/btn-minimize.png" width="45" height="30" alt="Minimize"></button>
 			<button class="btn-title" id="btn-max" uib-tooltip="Maximize" tooltip-placement="bottom" tooltip-popup-delay="1000"><img src="img/windows/btn-maximize.png" width="45" height="30" alt="Maximize"></button>
 			<button class="btn-title" id="btn-close" uib-tooltip="Close" tooltip-placement="bottom" tooltip-popup-delay="1000"><img src="img/windows/btn-close.png" width="45" height="30" alt="Close"></button>
