Implemented OS detection for window controls.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html ng-app="explorerApp">
+
 <head>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-
 	<!-- bower:css -->
 	<link rel="stylesheet" href="bower_components/jquery-editable-select/dist/jquery-editable-select.min.css" />
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
@@ -14,13 +14,15 @@
 	<link rel="stylesheet" href="bower_components/angular-hotkeys/build/hotkeys.css" />
 	<link rel="stylesheet" href="bower_components/font-roboto/dist/styles/roboto.css" />
 	<!-- endbower -->
-
 	<link rel="stylesheet" href="css/style.css">
-
 	<!-- comments:comment-block html -->
-	<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
+	<script>
+		if (typeof module === 'object') {
+			window.module = module;
+			module = undefined;
+		}
+	</script>
 	<!-- endcomments -->
-
 	<!-- bower:js -->
 	<script src="bower_components/jquery/dist/jquery.js"></script>
 	<script src="bower_components/jquery-ui/jquery-ui.js"></script>
@@ -45,13 +47,11 @@
 	<script src="bower_components/angular-hotkeys/build/hotkeys.js"></script>
 	<script src="bower_components/angular-translate/angular-translate.js"></script>
 	<!-- endbower -->
-
 	<script src="js/app.conf.js"></script>
 	<script src="js/app.route.js"></script>
 	<script src="js/app.api.js"></script>
 	<script src="js/app.translation.js"></script>
 	<script src="js/app.src.js"></script>
-
 	<!-- start auto template tags -->
 	<script type="text/javascript" src="js/host/app.dragDrop.js"></script>
 	<script type="text/javascript" src="js/host/app.window.js"></script>
@@ -91,6 +91,7 @@
 	<script type="text/javascript" src="partials/directives/art-style-binder.js"></script>
 	<script type="text/javascript" src="partials/directives/art-timeline.js"></script>
 	<script type="text/javascript" src="partials/directives/art-update-indicator.js"></script>
+	<script type="text/javascript" src="partials/directives/art-window-controls.js"></script>
 	<script type="text/javascript" src="partials/directives/bs-switch.js"></script>
 	<script type="text/javascript" src="partials/directives/ng-dropzone.js"></script>
 	<script type="text/javascript" src="partials/directives/ng-enter.js"></script>
@@ -106,31 +107,25 @@
 	<script type="text/javascript" src="partials/setup.controller.js"></script>
 	<script type="text/javascript" src="partials/start.controller.js"></script>
 	<!-- end auto template tags -->
-
 	<script>
-	if (window.module) module = window.module;
+		if (window.module) module = window.module;
 	</script>
 </head>
+
 <body>
 	<div art-keyboard-input-handler></div>
-
 	<div id="window-title">
+		<div art-window-controls></div>
+		<div class="window-title-btns pull-right">
+			<button class="btn-title btn-info" id="btn-update"><div art-update-indicator></div></button>
+		</div>
 		<div id="window-title-text">
 			<span><img src="img/artivity-66x20.png" width="66" height="20" style="opacity: .5" alt="artivity"/></span>
 		</div>
-
-		<div id="window-title-btns">
-			<button class="btn-title btn-info" id="btn-update"><div art-update-indicator></div></button>
-			<button class="btn-title" id="btn-min" uib-tooltip="Minimize" tooltip-placement="bottom" tooltip-popup-delay="1000"><img src="img/windows/btn-minimize.png" width="45" height="30" alt="Minimize"></button>
-			<button class="btn-title" id="btn-max" uib-tooltip="Maximize" tooltip-placement="bottom" tooltip-popup-delay="1000"><img src="img/windows/btn-maximize.png" width="45" height="30" alt="Maximize"></button>
-			<button class="btn-title" id="btn-close" uib-tooltip="Close" tooltip-placement="bottom" tooltip-popup-delay="1000"><img src="img/windows/btn-close.png" width="45" height="30" alt="Close"></button>
-		</div>
 	</div>
-
 	<div id="window-view-container">
 		<div ng-view></div>
 	</div>
-
 	<div class="overlay collapse" id="overlay">
 		<div class="msg center-xy invisible" id="msg-add-app">
 			<div class="row">
@@ -139,12 +134,10 @@
 				</div>
 				<div class="col-xs-10">
 					<h1>Add Application</h1>
-
 					<label>Drop the application icon here to register it with the plugin installer.</label>
 				</div>
 			</div>
 		</div>
-
 		<div class="msg center-xy invisible" id="msg-add-app-success">
 			<div class="row">
 				<div class="col-xs-2">
@@ -152,12 +145,10 @@
 				</div>
 				<div class="col-xs-10">
 					<h1>Application Installed</h1>
-
 					<label>Go to the application preferences to enable the plugin.</label>
 				</div>
 			</div>
 		</div>
-
 		<div class="msg center-xy invisible" id="msg-import">
 			<div class="row">
 				<div class="col-xs-2">
@@ -165,12 +156,10 @@
 				</div>
 				<div class="col-xs-10">
 					<h1>Import File</h1>
-
 					<label>Drop the file here to import the Artivity archive.</label>
 				</div>
 			</div>
 		</div>
-
 		<div class="msg center-xy invisible" id="msg-import-success">
 			<div class="row">
 				<div class="col-xs-2">
@@ -178,12 +167,10 @@
 				</div>
 				<div class="col-xs-10">
 					<h1>Import Success</h1>
-
 					<label>The Artivity archive was sucessfully imported.</label>
 				</div>
 			</div>
 		</div>
-
 		<div class="msg center-xy invisible" id="msg-unsupported-file-type">
 			<div class="row">
 				<div class="col-xs-2">
@@ -191,7 +178,6 @@
 				</div>
 				<div class="col-xs-10">
 					<h1>Unsupported File Format</h1>
-
 					<label>Currently you can only drop applications here to register them with the plugin installer.</label>
 				</div>
 			</div>
@@ -201,4 +187,5 @@
 <!-- Enable live-reload if we're in a development environment. The following empty 
 script is the container into which the livereload.js file is being loaded on run-time. -->
 <script type="text/javascript" id="livereload"></script>
+
 </html>
