Bugfix: Changed window title from 'index.html' to 'Artivity'.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -2,6 +2,8 @@
 <html ng-app="explorerApp">
 
 <head>
+	<title>Artivity</title>
+	
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<!-- bower:css -->
 	<link rel="stylesheet" href="bower_components/jquery-editable-select/dist/jquery-editable-select.min.css" />
