--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -55,18 +55,19 @@
 	<script src="js/app.translation.js"></script>
 	<!-- start auto template tags -->
 	<script type="text/javascript" src="js/host/app.dragDrop.js"></script>
-	<script type="text/javascript" src="js/host/app.window.js"></script>
 	<script type="text/javascript" src="js/host/updateChecker.js"></script>
 	<script type="text/javascript" src="js/lib/extensions.js"></script>
 	<script type="text/javascript" src="js/lib/functions.js"></script>
 	<script type="text/javascript" src="js/lib/livereload.js"></script>
 	<script type="text/javascript" src="js/lib/overlay.js"></script>
 	<script type="text/javascript" src="js/lib/quantize.js"></script>
+	<script type="text/javascript" src="js/lib/classes/activity.js"></script>
 	<script type="text/javascript" src="js/lib/classes/document-renderer-cache.js"></script>
 	<script type="text/javascript" src="js/lib/classes/document-renderer.js"></script>
 	<script type="text/javascript" src="js/lib/classes/editing-statistics.js"></script>
 	<script type="text/javascript" src="js/lib/classes/entity-cache.js"></script>
 	<script type="text/javascript" src="js/lib/classes/entity.js"></script>
+	<script type="text/javascript" src="js/lib/classes/event-dispatcher.js"></script>
 	<script type="text/javascript" src="js/lib/classes/heatmap-renderer.js"></script>
 	<script type="text/javascript" src="js/lib/classes/layer-cache.js"></script>
 	<script type="text/javascript" src="js/lib/classes/layer-tree-node.js"></script>
@@ -86,11 +87,11 @@
 	<script type="text/javascript" src="partials/directives/art-file-card.js"></script>
 	<script type="text/javascript" src="partials/directives/art-keyboard-input-handler.js"></script>
 	<script type="text/javascript" src="partials/directives/art-photo-picker.js"></script>
+	<script type="text/javascript" src="partials/directives/art-playback-control.js"></script>
 	<script type="text/javascript" src="partials/directives/art-settings-accounts.js"></script>
 	<script type="text/javascript" src="partials/directives/art-settings-apps.js"></script>
 	<script type="text/javascript" src="partials/directives/art-settings-user.js"></script>
 	<script type="text/javascript" src="partials/directives/art-style-binder.js"></script>
-	<script type="text/javascript" src="partials/directives/art-timeline.js"></script>
 	<script type="text/javascript" src="partials/directives/art-update-indicator.js"></script>
 	<script type="text/javascript" src="partials/directives/art-window-controls.js"></script>
 	<script type="text/javascript" src="partials/directives/bs-switch.js"></script>
