--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -77,15 +77,20 @@
 	<script type="text/javascript" src="js/lib/filters/reverse.js"></script>
 	<script type="text/javascript" src="js/lib/services/client.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/file.service.js"></script>
+	<script type="text/javascript" src="js/lib/services/formatting.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/selection.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/settings.service.js"></script>
+	<script type="text/javascript" src="js/lib/services/translation.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/update.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/window.service.js"></script>
 	<script type="text/javascript" src="partials/directives/art-calendar.js"></script>
 	<script type="text/javascript" src="partials/directives/art-client-state-info.js"></script>
 	<script type="text/javascript" src="partials/directives/art-color-picker.js"></script>
+	<script type="text/javascript" src="partials/directives/art-editing-history.js"></script>
+	<script type="text/javascript" src="partials/directives/art-editing-stats.js"></script>
 	<script type="text/javascript" src="partials/directives/art-file-card.js"></script>
 	<script type="text/javascript" src="partials/directives/art-keyboard-input-handler.js"></script>
+	<script type="text/javascript" src="partials/directives/art-layer-control.js"></script>
 	<script type="text/javascript" src="partials/directives/art-photo-picker.js"></script>
 	<script type="text/javascript" src="partials/directives/art-playback-control.js"></script>
 	<script type="text/javascript" src="partials/directives/art-settings-accounts.js"></script>
