Starting main window with /start URL. Implemented query editor in separate window.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="bower_components/angular-hotkeys/build/hotkeys.css" />
 	<link rel="stylesheet" href="bower_components/font-roboto/dist/styles/roboto.css" />
 	<!-- endbower -->
+	<link rel="stylesheet" href="bower_components/yasgui/dist/yasgui.min.css" />
 	<link rel="stylesheet" href="css/style.css">
 	<!-- comments:comment-block html -->
 	<script>
@@ -93,6 +94,7 @@
 	<script type="text/javascript" src="partials/directives/art-layer-control.js"></script>
 	<script type="text/javascript" src="partials/directives/art-photo-picker.js"></script>
 	<script type="text/javascript" src="partials/directives/art-playback-control.js"></script>
+	<script type="text/javascript" src="partials/directives/art-query-editor.js"></script>
 	<script type="text/javascript" src="partials/directives/art-settings-accounts.js"></script>
 	<script type="text/javascript" src="partials/directives/art-settings-apps.js"></script>
 	<script type="text/javascript" src="partials/directives/art-settings-user.js"></script>
@@ -194,5 +196,4 @@
 <!-- Enable live-reload if we're in a development environment. The following empty 
 script is the container into which the livereload.js file is being loaded on run-time. -->
 <script type="text/javascript" id="livereload"></script>
-
 </html>
