Implemented configurable connection timeout for application startup.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -76,6 +76,7 @@
 	<script type="text/javascript" src="js/lib/classes/layer.js"></script>
 	<script type="text/javascript" src="js/lib/classes/x-canvas-cache.js"></script>
 	<script type="text/javascript" src="js/lib/filters/reverse.js"></script>
+	<script type="text/javascript" src="js/lib/services/app.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/client.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/file.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/formatting.service.js"></script>
