Created file-list directive to prepare for projects Added a few more class mappings and the sioc ontology.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -77,6 +77,7 @@
 	<script type="text/javascript" src="js/lib/classes/x-canvas-cache.js"></script>
 	<script type="text/javascript" src="js/lib/filters/reverse.js"></script>
 	<script type="text/javascript" src="js/lib/services/app.service.js"></script>
+	<script type="text/javascript" src="js/lib/services/artFile.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/client.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/file.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/formatting.service.js"></script>
@@ -91,6 +92,7 @@
 	<script type="text/javascript" src="partials/directives/art-editing-history.js"></script>
 	<script type="text/javascript" src="partials/directives/art-editing-stats.js"></script>
 	<script type="text/javascript" src="partials/directives/art-file-card.js"></script>
+	<script type="text/javascript" src="partials/directives/art-file-list.js"></script>
 	<script type="text/javascript" src="partials/directives/art-keyboard-input-handler.js"></script>
 	<script type="text/javascript" src="partials/directives/art-layer-control.js"></script>
 	<script type="text/javascript" src="partials/directives/art-photo-picker.js"></script>
