--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -49,6 +49,7 @@
 	<script src="bower_components/yasgui/dist/yasgui.bundled.min.js"></script>
 	<script src="bower_components/angular-hotkeys/build/hotkeys.js"></script>
 	<script src="bower_components/angular-translate/angular-translate.js"></script>
+	<script src="bower_components/angular-dragdrop/src/angular-dragdrop.js"></script>
 	<!-- endbower -->
 	<script src="js/app.conf.js"></script>
 	<script src="js/app.route.js"></script>
@@ -81,6 +82,7 @@
 	<script type="text/javascript" src="js/lib/services/client.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/file.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/formatting.service.js"></script>
+	<script type="text/javascript" src="js/lib/services/project.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/selection.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/settings.service.js"></script>
 	<script type="text/javascript" src="js/lib/services/translation.service.js"></script>
@@ -97,6 +99,7 @@
 	<script type="text/javascript" src="partials/directives/art-layer-control.js"></script>
 	<script type="text/javascript" src="partials/directives/art-photo-picker.js"></script>
 	<script type="text/javascript" src="partials/directives/art-playback-control.js"></script>
+	<script type="text/javascript" src="partials/directives/art-project-list.js"></script>
 	<script type="text/javascript" src="partials/directives/art-query-editor.js"></script>
 	<script type="text/javascript" src="partials/directives/art-settings-accounts.js"></script>
 	<script type="text/javascript" src="partials/directives/art-settings-apps.js"></script>
@@ -112,6 +115,7 @@
 	<script type="text/javascript" src="partials/dialogs/calendar-dialog.controller.js"></script>
 	<script type="text/javascript" src="partials/dialogs/publish-file-dialog.controller.js"></script>
 	<script type="text/javascript" src="partials/dialogs/update-dialog.controller.js"></script>
+	<script type="text/javascript" src="partials/dialogs/update-project-dialog.controller.js"></script>
 	<script type="text/javascript" src="partials/file-list.controller.js"></script>
 	<script type="text/javascript" src="partials/file-view.controller.js"></script>
 	<script type="text/javascript" src="partials/query.controller.js"></script>
