Added JWT authentication client. Added Artivity service client.

--- a/Journal/index.html
+++ b/Journal/index.html
@@ -134,7 +134,7 @@
 			<button class="btn-title btn-info" id="btn-update"><div art-update-indicator></div></button>
 		</div>
 		<div id="window-title-text">
-			<span><img src="img/artivity-66x20.png" width="66" height="20" style="opacity: .5" alt="artivity"/></span>
+			<span><img src="img/artivity-66x20.png" width="66" height="20" alt="artivity"/></span>
 		</div>
 	</div>
 	<div id="window-view-container">
