Added simple file view. Extended commenting data model. Merged ART ontologies.

--- a/Journal/index.html
+++ b/Journal/index.html
@@ -75,11 +75,16 @@
 	<script type="text/javascript" src="app/classes/layer-tree.js"></script>
 	<script type="text/javascript" src="app/classes/layer.js"></script>
 	<script type="text/javascript" src="app/classes/x-canvas-cache.js"></script>
+	<script type="text/javascript" src="app/services/agent.service.js"></script>
 	<script type="text/javascript" src="app/services/app.service.js"></script>
 	<script type="text/javascript" src="app/services/artFile.service.js"></script>
 	<script type="text/javascript" src="app/services/client.service.js"></script>
+	<script type="text/javascript" src="app/services/comment.service.js"></script>
+	<script type="text/javascript" src="app/services/derivation.service.js"></script>
+	<script type="text/javascript" src="app/services/entity.service.js"></script>
 	<script type="text/javascript" src="app/services/file.service.js"></script>
 	<script type="text/javascript" src="app/services/formatting.service.js"></script>
+	<script type="text/javascript" src="app/services/image.service.js"></script>
 	<script type="text/javascript" src="app/services/project.service.js"></script>
 	<script type="text/javascript" src="app/services/selection.service.js"></script>
 	<script type="text/javascript" src="app/services/settings.service.js"></script>
@@ -99,6 +104,7 @@
 	<script type="text/javascript" src="app/partials/directives/art-editing-stats.js"></script>
 	<script type="text/javascript" src="app/partials/directives/art-file-card.js"></script>
 	<script type="text/javascript" src="app/partials/directives/art-file-list.js"></script>
+	<script type="text/javascript" src="app/partials/directives/art-file-view-simple/art-file-view-simple.js"></script>
 	<script type="text/javascript" src="app/partials/directives/art-keyboard-input-handler.js"></script>
 	<script type="text/javascript" src="app/partials/directives/art-layer-control.js"></script>
 	<script type="text/javascript" src="app/partials/directives/art-photo-picker.js"></script>
@@ -116,6 +122,7 @@
 	<script type="text/javascript" src="app/partials/directives/ng-enter.js"></script>
 	<script type="text/javascript" src="app/partials/directives/ng-esc.js"></script>
 	<script type="text/javascript" src="app/partials/file-list.controller.js"></script>
+	<script type="text/javascript" src="app/partials/file-view-simple.controller.js"></script>
 	<script type="text/javascript" src="app/partials/file-view.controller.js"></script>
 	<script type="text/javascript" src="app/partials/query.controller.js"></script>
 	<script type="text/javascript" src="app/partials/settings.controller.js"></script>
