--- a/Journal/app/directives/art-file-preview/art-file-preview.html
+++ b/Journal/app/directives/art-file-preview/art-file-preview.html
@@ -8,12 +8,16 @@
                             <div class="padding-x-xl padding-y-none" style="padding-right: 0 !important;">
                                 <div class="col expand">
                                     <span class="label">{{derivation.AtTime}}</span>
+
+                                    <div ng-if="vm.selectedDerivation === derivation" ng-repeat="comment in vm.comments[derivation.Uri]">
+                                        {{comment.Message}} <a ng-if="comment.Regions.length > 0" ng-click="vm.showRegions(comment)">Show</a>
+                                    </div>
                                 </div>
                             </div>
                         </li>
                     </ul>
                 </div>
-                <div class="row"><button class="btn-chromeless btn" ng-click="vm.Post()">Save</button></div>
+                <div class="row"><button class="btn-chromeless btn" ng-click="vm.commit()">Save</button></div>
                     <div class="row">
 				    <div class="ctl-comment">
 							<textarea id="msg-txt" placeholder="{{ 'FILEVIEW.WRITE_MSG' | translate }}" ng-model="vm.currentComment.text" required />
