Refactored rendering code: New base class for normal document viewer and document history viewer.

--- a/Journal/app/directives/art-file-card/art-file-card.html
+++ b/Journal/app/directives/art-file-card/art-file-card.html
@@ -6,6 +6,6 @@
     <div class="file-name">{{t.fileName}}</div>
     <div class="file-extension" style="background-color: {{t.file.agentColor}};">{{t.fileExtension}}</div>
 
-    <a ng-if="t.link" href="#/files/view?uri={{t.file.uri}}"></a>
-	<!--<a ng-if="t.link" href="#/files/preview?uri={{t.file.uri}}"></a>-->
+    <!--<a ng-if="t.link" href="#/files/view?uri={{t.file.uri}}"></a>-->
+	<a ng-if="t.link" ng-click="t.onClick($event)" href="#"></a>
 </div>
